@@ -2240,7 +2240,7 @@ DOC
 	     _sections => [ '/[^\s,]+/' ],
 	     _vars => [ qw(to from edgetrigger) ],
 	     _mandatory => [ qw(to from)],
-	     to => { doc => <<DOC,
+	     to => { _doc => <<DOC,
 Either an email address to send alerts to, or the name of a program to
 execute when an alert matches. To call a program, the first character of the
 B<to> value must be a pipe symbol "|". The program will the be called
@@ -2252,11 +2252,11 @@ DOC
 			_re => '(\|.+|.+@\S+|snpp:)',
 			_re_error => 'put an email address or the name of a program here',
 		      },
-	     from => { doc => 'who should alerts appear to be coming from ?',
+	     from => { _doc => 'who should alerts appear to be coming from ?',
 		       _re => '.+@\S+',
 		       _re_error => 'put an email address here',
 		      },
-             edgetrigger => { doc => <<DOC,
+             edgetrigger => { _doc => <<DOC,
 The alert notifications and/or the programs executed are normally triggered every
 time the alert matches. If this variable is set to 'yes', they will be triggered
 only when the alert's state is changed, ie. when it's raised and when it's cleared.
@@ -2274,7 +2274,7 @@ DOC
 		  _vars => [ qw(type pattern comment to edgetrigger) ],
                   _inherited => [ qw(edgetrigger) ],
 		  _mandatory => [ qw(type pattern comment) ],
-	          to => { doc => 'Similar to the "to" parameter on the top-level except that  it will only be used IN ADDITION to the value of the toplevel parameter. Same rules apply.',
+	          to => { _doc => 'Similar to the "to" parameter on the top-level except that  it will only be used IN ADDITION to the value of the toplevel parameter. Same rules apply.',
 			_re => '(\|.+|.+@\S+|snpp:)',
 			_re_error => 'put an email address or the name of a program here',
 		          },
