@@ -1,3 +1,5 @@
+* made some alert docs in smokeping_config visible --niko
+
 2005/9/13 -- released version 20050913_trunk
 
 * optionally only send alerts when the state changes ('edgetrigger')
